--- a/styles/scss/_globals.scss
+++ b/styles/scss/_globals.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap');
 @font-face {
     font-family: "CooperHewitt";
     src: url("../../assets/Cooper-Hewitt.ttf") format("truetype");
