--- a/styles/scss/clock.scss
+++ b/styles/scss/clock.scss
@@ -16,6 +16,7 @@ $size: 350px;
         display: flex;
         justify-content: center;
         position: relative;
+        box-shadow: 18px 0px 15px #fda5b4, inset 3px 1px 2px #fda5b4;
     }
     &__outline-outer {
         border: 2px solid g.$hotpink;
@@ -25,6 +26,7 @@ $size: 350px;
         margin: 2px;
         padding-bottom: 15px;
         padding-right: 15px;
+        box-shadow: inset 0px 0px 0 2px #ff3377, -7px 4px 12px 0px #ff3377;
     }
     &__second, &__minute, &__hour {
         position: absolute;
