--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -63,11 +63,12 @@ html, body {
   padding-bottom: 70em;
   width: 100%;
 }
+#notes-section .notes-spacer {
+  padding-top: 20em;
+}
 #notes-section .top {
   display: flex;
   justify-content: center;
-  margin-top: 2em;
-  padding-top: 8em;
   margin-bottom: 3em;
 }
 #notes-section .top #concept {
@@ -137,7 +138,6 @@ body {
   height: 100%;
   width: 100%;
 }
-
 
 .section {
   height: 100vh;
@@ -239,7 +239,7 @@ p {
 #questionnaire-section {
   display: flex;
   margin-top: -3px;
-  height: 70vh;
+  height: 50vh;
 }
 #questionnaire-section .container {
   width: 85%;
