--- a/styles/scss/page.scss
+++ b/styles/scss/page.scss
@@ -32,16 +32,13 @@ html, body {
 
 
 #notes-section {
-    background-image: url("../../img/grid.png");
+    background-image: url("../../img/gridtop.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 100%;
-    padding-bottom: 70em;
-    //height: 150vh;
-    width: 100%;
+    height: 180vh;
     .notes-spacer {
-       padding-top: 20em;
+       padding-top: 10em;
     }
     .top {
         display: flex;
@@ -226,7 +223,7 @@ p {
 #questionnaire-section {
     display: flex;
     margin-top: -3px;
-    height: 50vh;
+    height: 80vh;
     .container {
         width: 85%;
         min-height: 60vh;
@@ -249,13 +246,14 @@ p {
     .question-section {
         display: none;
         text-align: center;
-        .statement {
+        .choices, .statement {
             font-family: 'CooperHewitt';
             font-weight: 700;
             font-style: normal;
             letter-spacing: 1.5px;
             text-transform: uppercase;
-        }   
+        }
+
         .question-section:first-of-type {
             margin-bottom: 1em;
         }
