--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -1,4 +1,4 @@
-/* @import url("https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap");
 @font-face {
   font-family: "CooperHewitt";
   src: url("../../assets/Cooper-Hewitt.ttf") format("truetype");
@@ -29,24 +29,28 @@
   font-weight: normal;
   font-style: normal;
 }
-*/
 html, body {
   margin: 0;
   padding: 0;
   width: 100%;
-  font-family: "Helvetica";
 }
 
+.book {
+  font-family: "CooperHewittBook";
+}
 
+.cursive {
+  font-family: "CooperHewitt";
+  font-weight: 200;
+  font-style: italic;
+}
 
 .section-leadin {
   height: calc(100% - 660px);
 }
 .section-leadin .leadin-title {
-  font-family: "Helvetica Neue";
-  -webkit-text-stroke: 1px white;
-  -webkit-text-fill-color: black;
-  font-size: 4rem;
+  font-family: "Bungee Shade", cursive;
+  font-size: 2.85rem;
   margin: 7px 0 0 1em;
 }
 
@@ -97,9 +101,8 @@ html, body {
   font-style: normal !important;
 }
 
-
-
 body {
+  font-family: "CooperHewitt";
   font-weight: 200;
   font-style: italic;
   color: white;
@@ -161,13 +164,6 @@ p {
   font-weight: 20pt;
 }
 
-#ghosts{
-  max-width: 800px; 
-  max-height: 1200px;
-  margin-left: -600px; 
-  margin-top: 90px; 
-  opacity: .7;
-}
 #questionnaire-intro {
   height: 50vh !important;
   text-align: left;
@@ -604,9 +600,10 @@ p {
 
 #industrialization-section {
   display: flex;
+  justify-content: center;
 }
 #industrialization-section #gears-area {
-  width: 900px;
+  width: 750px;
 }
 #industrialization-section #gears-area #gears__clock {
   width: 100%;
@@ -615,6 +612,21 @@ p {
 }
 #industrialization-section #gears-area #gears__bg {
   max-width: 100%;
+}
+#industrialization-section #gears-area .gears__longing {
+  z-index: 5;
+  animation: rotation 3s infinite linear;
+  position: absolute;
+  width: 225px;
+  height: 225px;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  left: 0;
+  right: 0;
+}
+#industrialization-section #gears-area .gears__longing img {
+  width: 100%;
 }
 #industrialization-section #gears-area #gears__individual {
   bottom: -10px;
@@ -626,16 +638,25 @@ p {
 #industrialization-section #gears-area #gears__individual .gears__relative {
   position: relative;
 }
+#industrialization-section #gears-area .gears__handles {
+  z-index: 10;
+  position: absolute;
+  width: 300px;
+  right: 27px;
+  top: 38px;
+}
 #industrialization-section #gears-area .gears__rot1 {
+  z-index: 3;
   animation: rotation 2s infinite linear;
   position: absolute;
-  top: 24px;
-  right: 50px;
+  top: 65px;
+  left: 91px;
 }
 #industrialization-section #gears-area .gears__rot1 img {
-  width: 200px;
+  width: 175px;
 }
 #industrialization-section #gears-area .gears__rot2 {
+  z-index: 2;
   animation: rotation 5s infinite linear;
   position: absolute;
   top: 25px;
@@ -644,25 +665,47 @@ p {
 #industrialization-section #gears-area .gears__rot2 img {
   width: 190px;
 }
-#industrialization-section #gears-area .gears__mid {
-  animation: rotation 9s infinite linear;
-  z-index: 10;
-  position: absolute;
-  top: 73px;
-  left: 66px;
-}
-#industrialization-section #gears-area .gears__mid img {
-  width: 300px;
-}
 #industrialization-section #gears-area .gears__rot3 {
-  animation: rotation 7s infinite linear;
-  z-index: 20;
+  z-index: 1;
+  animation: rotation 5s infinite linear;
   position: absolute;
-  bottom: 0;
-  right: 0;
+  bottom: 111px;
+  left: 55px;
 }
 #industrialization-section #gears-area .gears__rot3 img {
-  width: 260px;
+  width: 190px;
+}
+#industrialization-section #gears-area .gears__rot4 {
+  z-index: 2;
+  animation: rotation 5s infinite linear;
+  position: absolute;
+  bottom: 138px;
+  right: 33px;
+}
+#industrialization-section #gears-area .gears__rot4 img {
+  width: 195px;
+}
+#industrialization-section .gears__bottom {
+  animation: rotation 9s infinite linear;
+  z-index: 20;
+  width: 270px;
+  height: 270px;
+  bottom: -55px;
+}
+#industrialization-section .gears__bottom-center {
+  z-index: 21;
+  width: 225px;
+  height: 225px;
+  bottom: -33px;
+}
+#industrialization-section .gears__bottom, #industrialization-section .gears__bottom-center {
+  position: absolute;
+  margin: auto;
+  left: 46px;
+  right: 0;
+}
+#industrialization-section .gears__bottom img, #industrialization-section .gears__bottom-center img {
+  width: 100%;
 }
 #industrialization-section #industrialization-text-area {
   flex: 1;
